[gd_scene load_steps=61 format=3 uid="uid://b71bxsh7scdyh"]

[ext_resource type="Script" uid="uid://dqawjhav8cttw" path="res://game/entities/creatures/player/powerups/proxy_mine.gd" id="2_a0fo6"]
[ext_resource type="Texture2D" uid="uid://bc0bya17ldvjh" path="res://assets/sprites/player/powerups/MineExplosionSpriteSheetPacked2.png" id="2_ddoco"]
[ext_resource type="Texture2D" uid="uid://5iwg8i6f7spx" path="res://assets/sprites/player/powerups/Mine-arming.png" id="2_pqrf2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rppti"]
atlas = ExtResource("2_ddoco")
region = Rect2(0, 0, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u566"]
atlas = ExtResource("2_ddoco")
region = Rect2(1200, 0, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxomj"]
atlas = ExtResource("2_ddoco")
region = Rect2(2400, 0, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_lor03"]
atlas = ExtResource("2_ddoco")
region = Rect2(3600, 0, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyj5o"]
atlas = ExtResource("2_ddoco")
region = Rect2(4800, 0, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ouha"]
atlas = ExtResource("2_ddoco")
region = Rect2(0, 714, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_x631n"]
atlas = ExtResource("2_ddoco")
region = Rect2(1200, 714, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7o66"]
atlas = ExtResource("2_ddoco")
region = Rect2(2400, 714, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8som"]
atlas = ExtResource("2_ddoco")
region = Rect2(3600, 714, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vr6y"]
atlas = ExtResource("2_ddoco")
region = Rect2(4800, 714, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_kny5w"]
atlas = ExtResource("2_ddoco")
region = Rect2(0, 1428, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4hxg"]
atlas = ExtResource("2_ddoco")
region = Rect2(1200, 1428, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_g418g"]
atlas = ExtResource("2_ddoco")
region = Rect2(2400, 1428, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjy65"]
atlas = ExtResource("2_ddoco")
region = Rect2(3600, 1428, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeu0e"]
atlas = ExtResource("2_ddoco")
region = Rect2(4800, 1428, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll6t5"]
atlas = ExtResource("2_ddoco")
region = Rect2(0, 2142, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejnio"]
atlas = ExtResource("2_ddoco")
region = Rect2(1200, 2142, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_q36v6"]
atlas = ExtResource("2_ddoco")
region = Rect2(2400, 2142, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_67tbl"]
atlas = ExtResource("2_ddoco")
region = Rect2(3600, 2142, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkx0r"]
atlas = ExtResource("2_ddoco")
region = Rect2(4800, 2142, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfuon"]
atlas = ExtResource("2_ddoco")
region = Rect2(0, 2856, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhigq"]
atlas = ExtResource("2_ddoco")
region = Rect2(1200, 2856, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_cv85h"]
atlas = ExtResource("2_ddoco")
region = Rect2(2400, 2856, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_qegw4"]
atlas = ExtResource("2_ddoco")
region = Rect2(3600, 2856, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk7xh"]
atlas = ExtResource("2_ddoco")
region = Rect2(4800, 2856, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_urloj"]
atlas = ExtResource("2_ddoco")
region = Rect2(0, 3570, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lp5c"]
atlas = ExtResource("2_ddoco")
region = Rect2(1200, 3570, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_j372o"]
atlas = ExtResource("2_ddoco")
region = Rect2(2400, 3570, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqg54"]
atlas = ExtResource("2_ddoco")
region = Rect2(3600, 3570, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_epchh"]
atlas = ExtResource("2_ddoco")
region = Rect2(4800, 3570, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ihdp"]
atlas = ExtResource("2_ddoco")
region = Rect2(0, 4284, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6yxn"]
atlas = ExtResource("2_ddoco")
region = Rect2(1200, 4284, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_d83on"]
atlas = ExtResource("2_ddoco")
region = Rect2(2400, 4284, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij0is"]
atlas = ExtResource("2_ddoco")
region = Rect2(3600, 4284, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx2a3"]
atlas = ExtResource("2_ddoco")
region = Rect2(4800, 4284, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_lel27"]
atlas = ExtResource("2_ddoco")
region = Rect2(0, 4998, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3ice"]
atlas = ExtResource("2_ddoco")
region = Rect2(1200, 4998, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysq3f"]
atlas = ExtResource("2_ddoco")
region = Rect2(2400, 4998, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_utibx"]
atlas = ExtResource("2_ddoco")
region = Rect2(3600, 4998, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0tr1"]
atlas = ExtResource("2_ddoco")
region = Rect2(4800, 4998, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjrrj"]
atlas = ExtResource("2_ddoco")
region = Rect2(0, 5712, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvta8"]
atlas = ExtResource("2_ddoco")
region = Rect2(1200, 5712, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehht5"]
atlas = ExtResource("2_ddoco")
region = Rect2(2400, 5712, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_40jde"]
atlas = ExtResource("2_ddoco")
region = Rect2(3600, 5712, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbxq6"]
atlas = ExtResource("2_ddoco")
region = Rect2(4800, 5712, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ewo4"]
atlas = ExtResource("2_ddoco")
region = Rect2(0, 6426, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_627pt"]
atlas = ExtResource("2_ddoco")
region = Rect2(1200, 6426, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wttr"]
atlas = ExtResource("2_ddoco")
region = Rect2(2400, 6426, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f3vw"]
atlas = ExtResource("2_ddoco")
region = Rect2(3600, 6426, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6880"]
atlas = ExtResource("2_ddoco")
region = Rect2(4800, 6426, 1200, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddoco"]
atlas = ExtResource("2_pqrf2")
region = Rect2(0, 0, 33, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tiqx"]
atlas = ExtResource("2_pqrf2")
region = Rect2(33, 0, 33, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofdw5"]
atlas = ExtResource("2_pqrf2")
region = Rect2(66, 0, 33, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_adyft"]
atlas = ExtResource("2_pqrf2")
region = Rect2(99, 0, 33, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqrf2"]
atlas = ExtResource("2_pqrf2")
region = Rect2(0, 0, 33, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ofdw5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rppti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u566")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxomj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lor03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyj5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ouha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x631n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7o66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8som")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vr6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kny5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4hxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g418g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjy65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeu0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll6t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejnio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q36v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67tbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkx0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfuon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhigq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cv85h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qegw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk7xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urloj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lp5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j372o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqg54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epchh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ihdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6yxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d83on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij0is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx2a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lel27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3ice")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysq3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utibx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0tr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjrrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvta8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehht5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40jde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbxq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ewo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_627pt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wttr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f3vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6880")
}],
"loop": false,
"name": &"explosion",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddoco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tiqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofdw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adyft")
}],
"loop": true,
"name": &"flashing",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqrf2")
}],
"loop": true,
"name": &"not_flashing",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5hwcm"]
radius = 32.0

[node name="proxy_mine" type="Area2D"]
script = ExtResource("2_a0fo6")

[node name="despawn_timer" type="Timer" parent="."]

[node name="arming_timer" type="Timer" parent="."]
one_shot = true

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ofdw5")
animation = &"flashing"
autoplay = "not_flashing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_5hwcm")

[node name="drawing_test" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="arming_timer" to="." method="_on_arming_timer_timeout"]
[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="drawing_test" to="." method="_on_drawing_test_timeout"]
